<resources>
    <string name="app_name">BOOKREST</string>
    <string name="logo">Logo</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="submit">Sign up</string>
    <string name="hint_confirm">Confirm password</string>
    <string name="tv_login_forgot_password">Forgot Password?</string>
    <string name="tv_login_message">Already have a profile?</string>
    <string name="tv_login_log_in"><u><i>Log in</i></u></string>
    <string name="login_username">Username</string>
    <string name="login">Log in</string>
    <string name="tv_login_no_profile_message">Do not have a profile?</string>
    <string name="tv_login_sign_up_message"><u><i>Sign Up Here</i></u></string>
    <string name="loading">Loading ...</string>
    <string name="loading_description">Loading</string>
    <string name="welcome_back_message">Welcome back! Login to enter</string>
    <string name="login_welcome_message">Welcome! Register to enter</string>
    <string name="action_filter">Create</string>
    <string name="action_generate_data">Generate</string>
    <string name="menu_item_list">Profile</string>
    <string name="menu_item_profile">restaurants</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_help">help</string>
    <string name="test_date">Wednesday, 14 May</string>
    <string name="test_greeting">Welcome, Volodya</string>
    <string name="tab_item_liked">Liked</string>
    <string name="tab_item_nearby">Nearby</string>
    <string name="tab_item_famous">Popular</string>
    <string name="tab_item_all">All</string>
    <string name="content_description_profile_image">profile image</string>
    <string name="review_parentheses">(%1$s)</string>
    <string name="base_url">https://bookrest1.herokuapp.com/api/v1/auth/</string>

<!--    LOGIN ERRORS -->
    <string name="error_username_empty">Please enter username</string>
    <string name="error_username_incorrect">Unacceptable password. Allowing a—z, A—Z, 0—9</string>
    <string name="error_username_length">Username length should be 3—15</string>

    <string name="error_password_empty">Please enter password</string>
    <string name="error_password_incorrect">Weak password. Should contain a-z,A-Z</string>
    <string name="error_password_length">Password length should be 6–15</string>

    <string name="error_confirmation_empty">Please confirm your password</string>
    <string name="error_confirmation_incorrect">Unacceptable confirmation. Allowing a—z, A—Z, 0—9</string>
    <string name="error_confirmation_different">Confirmation should match the password</string>

    <string name="error_email_empty">Please enter email address</string>
    <string name="error_email_incorrect">Please check correctness of email address</string>

    <string name="error_server_not_responding">Oops, bad things happened.. Try again</string>
    <string name="error_no_internet">Make sure you have an active data connection</string>

</resources>