<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/bottom_item">
        <item
            android:id="@+id/nav_tasks"
            android:icon="@drawable/menu_item_list"
            android:title="@string/menu_item_profile"
            />
        <item
            android:id="@+id/nav_duration"
            android:icon="@drawable/menu_item_person"
            android:title="@string/menu_item_restaurants" />
        <item
            android:id="@+id/placeholder_fab_create"
            android:title="" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/menu_item_setting"
            android:title="@string/menu_item_settings" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/menu_item_help"
            android:title="@string/menu_item_help" />
    </group>
</menu>