<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.LoadingActivity"
        android:background="@drawable/auth_input_background"
        >

        <ImageView
            android:id="@+id/iv_sign_up_logo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/logo"
            android:src="@drawable/ic_logo_8_chair"
            app:layout_constraintBottom_toTopOf="@+id/tv_sign_up_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHeight_percent=".25"
            />

        <TextView
            android:id="@+id/tv_sign_up_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_sign_up_logo" />

        <LinearLayout
            android:id="@+id/linear_sign_up_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_sign_up_header">

            <TextView
                android:id="@+id/tv_sign_up_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/login_welcome_message"
                android:textAlignment="center"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="24sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_signup_email_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/hint_email"
                android:textColorHint="?attr/hintTextColor"
                app:boxBackgroundMode="filled"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:errorTextColor="?attr/colorError"
                app:helperText="*">

                <EditText
                    android:id="@+id/et_signup_email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:autofillHints="something"
                    android:background="@drawable/auth_et_input"
                    android:drawableStart="@drawable/auth_email_custom"
                    android:drawablePadding="12dp"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:textColor="?attr/colorPrimaryVariant"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_signup_password_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:textColorHint="?attr/hintTextColor"
                app:boxBackgroundMode="filled"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:errorTextColor="?attr/colorError"
                app:helperText="*"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/et_signup_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:autofillHints="password"
                    android:background="@drawable/auth_et_input"
                    android:drawableStart="@drawable/auth_lock_custom"
                    android:drawablePadding="12dp"
                    android:inputType="textPassword"
                    android:textColor="?attr/colorPrimaryVariant"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_signup_confirmation_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_confirm"
                android:textColorHint="?attr/hintTextColor"
                app:boxBackgroundMode="filled"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:errorTextColor="?attr/colorError"
                app:helperText="*">

                <EditText
                    android:id="@+id/et_signup_confirmation"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:autofillHints="password"
                    android:background="@drawable/auth_et_input"
                    android:drawableStart="@drawable/auth_lock_custom"
                    android:drawablePadding="12dp"
                    android:inputType="textPassword"
                    android:textColor="?attr/colorPrimaryVariant"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_signup_username_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_username"
                android:textColorHint="?attr/hintTextColor"
                app:boxBackgroundMode="filled"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:errorTextColor="?attr/colorError"
                app:helperText="*">

                <EditText
                    android:id="@+id/et_signup_username"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:autofillHints="username"
                    android:background="@drawable/auth_et_input"
                    android:drawableStart="@drawable/auth_person_custom"
                    android:drawablePadding="12dp"
                    android:inputType="textNoSuggestions"
                    android:textColor="?attr/colorPrimaryVariant"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_signup_response_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:textColor="?attr/colorSecondary"
                android:textSize="14sp"
                app:drawableStartCompat="@drawable/ic_baseline_error_24"
                android:visibility="invisible"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_signup_submit"
                android:layout_width="192dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/login_submit_button"
                android:text="@string/submit"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/tv_login_message"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"
                    android:text="@string/tv_login_log_in"
                    android:textColor="?attr/colorSecondaryVariant"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>