<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewmodel"
            type="com.slobodyanyuk_mykhailo99.bookrest.ui.auth.AuthViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.LoadingActivity">

        <ImageView
            android:id="@+id/iv_load_pic"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@id/iv_load_pic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/hint_email"
                app:helperText="*"
                app:errorText="@{viewmodel.emailErrorMessage}"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopStart="30dp"
                app:boxCornerRadiusTopEnd="30dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:autofillHints="email"
                    android:drawableStart="@drawable/ic_email_custom"
                    android:drawablePadding="12dp"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:text="@={viewmodel.email}"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                app:helperText="*"
                app:errorText="@{viewmodel.passwordErrorMessage}"
                app:passwordToggleEnabled="true"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopStart="30dp"
                app:boxCornerRadiusTopEnd="30dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="8dp"
                    android:autofillHints="password"
                    android:drawableStart="@drawable/ic_lock_custom"
                    android:drawablePadding="12dp"
                    android:inputType="textPassword"
                    android:text="@={viewmodel.password}"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_password_confirm"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_confirm"
                app:helperText="*"
                app:errorText="@{viewmodel.confirmationErrorMessage}"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:autofillHints="password"
                    android:drawableStart="@drawable/ic_lock_custom"
                    android:drawablePadding="12dp"
                    android:inputType="textPassword"
                    android:text="@={viewmodel.confirmation}"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_login_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/login_forgot_password"
                android:textColor="@color/design_default_color_primary"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_submit"
                android:layout_width="112dp"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:background="@drawable/login_submit_button"
                android:enabled="@{viewmodel.isValid()}"

                android:text="@string/submit"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />
<!--            android:visibility="@{viewmodel.isValid() ? View.VISIBLE : View.GONE}"-->
            <!--                android:onClick="@{viewmodel::onSubmitClick}" />-->
            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                android:text="@string/login_log_in"
                android:textColor="@color/design_default_color_primary"
                android:textSize="18sp" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>